<resources>
    <string name="app_name">LanguageCards</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Card</string>
    <string name="action_edit">Edit Card</string>
    <string name="action_switch_direction">Switch Direction</string>

    <string name="btn_next">Next</string>
    <string name="btn_check">Check</string>
    <string name="title_activity_add_word">AddWordActivity</string>

    <string name="load_list">Load list</string>
    <string name="word_list">Words list</string>
    <string name="load_list_err">Load list Error</string>
    <string name="load_list_loaded">List is loaded</string>
    <string name="title_activity_word_list">WordListActivity</string>
    <string name="msg_deleted">Deleted</string>
    <string name="msg_btn_undo">Undo</string>
    <string name="hello_world">Hello world!</string>
    <string name="cb_learned">Learned</string>
    <color name="doneTextViewColor">#B5B5B5</color>
    <string name="hint_word_lang1">Word Lang1</string>
    <string name="hint_word_lang2">Word Lang2</string>
    <string name="hint_lesson">Lesson</string>

</resources>
