<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/action_switch_direction"
        android:title="@string/action_switch_direction"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_word_list"
        android:title="@string/word_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/load_list"
        android:title="@string/load_list"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
