<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/et_word_to_add1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:hint="@string/hint_word_lang1">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_word_to_add2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_word_lang2"
        android:layout_margin="@dimen/view_margin" />

    <AutoCompleteTextView
        android:id="@+id/et_lesson"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lesson"
        android:completionThreshold="1"
        android:layout_margin="@dimen/view_margin" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_learned"
        android:id="@+id/cb_learned" />

</LinearLayout>